--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
           <li class="nav-item"><a href="#">Link</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <a href="#" class="dropdown-toggle myDropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
             <ul class="dropdown-menu">
               <li><a href="#">Action</a></li>
               <li><a href="#">Another action</a></li>
